# rowmapy

./: LICENSE  README.md  setup.cfg  setup.py
docs/: README.md  conf.py  index.rst  modules.rst  requirements.txt
examples/: simple-subscriber.py
src/rowmapy/: __init__.py  rowma.py
