[metadata]
name = rowmapy
version = attr:rowmapy.__version__
author = asmsuechan
author_email = suenagaryoutaabc@gmail.com
description = example is a example package
long_description = file:README.md
url = https://github.com/rowma
license = Apache License, Version 2.0
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
package_dir=
    =src
packages=find:
zip_safe = False
include_package_data = True
install_requires =
  requests
  socketio

[options.packages.find]
where=src
